# SubsCrypt-python-package

./: .gitignore  README.md  config.json  setup.cfg  tests.py
.github/workflows/: publish.yml  test.yml
subscrypt/: __init__.py  client.py
