[metadata]
name = subscrypt
version = 0.0.0
description = Python client for Subscrypt
long_description = Python client for Subscrypt
url = https://github.com/oxydev/SubsCrypt-python-package
author = Ali Ahmadi
author_email = ali.ahmadi.star27@gmail.com
maintainer = Ali Ahmadi
maintainer_email = ali.ahmadi.star27@gmail.com
keywords = Subscrypt, blockchain, subscribe, subscription
license = Apache
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = subscrypt
python_requires = >=3.6
install_requires =
    requests